added get attributes and get tosca credentials
